--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "tailwind" : "npx tailwindcss -i ./static/src/input.css -o ./static/css/main.css --watch"
+    "tailwind": "npx tailwindcss -i ./static/src/input.css -o ./static/css/main.css --watch",
+    "build": "npx tailwindcss -i ./static/src/input.css -o ./static/css/main.css --minify && pyinstaller cb-quest-tracker.spec"
   },
   "keywords": [],
   "author": "",
