--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tailwind": "npx tailwindcss -i ./static/src/input.css -o ./static/css/main.css --watch",
-    "build": "npx tailwindcss -i ./static/src/input.css -o ./static/css/main.css --minify && pyinstaller cb-quest-tracker.spec"
+    "build": "npx tailwindcss -i ./static/src/input.css -o ./static/css/main.css --minify && pip install -r requirements.txt && pyinstaller cb-quest-tracker.spec"
   },
   "keywords": [],
   "author": "",
